--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,8 @@
     = csrf_meta_tags
   %body
     .head
-    .nav_menu
+    .nav_wrapper
+      .nav_menu.container
     .content
       .container
         = yield
