Added Footer links

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -29,6 +29,14 @@ body {
     .container {
       padding: 20px;
       text-align: center;
+      .footer_button {
+        cursor: pointer;
+        display: inline-block;
+	&:hover {
+	  color: aliceblue;  
+	}
+      }
     }
+
   }
 }
