added back correct css

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -29,6 +29,13 @@ body {
     .container {
       padding: 20px;
       text-align: center;
+      .footer_button {
+        display: inline-block;
+	cursor: pointer;
+        &:hover {
+	  color: aliceblue;
+	}
+      }
     }
   }
 }
