added header image to the home page. Layout now rendered everypage

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,8 +9,7 @@
     .head
     .nav_wrapper
       .nav_menu.container
-    .content
-      .container
-        = yield
+    .content.container
+      = yield
     .footer
 
