--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -23,10 +23,16 @@ body {
       }
     }
   }
+
+  .home_img {
+    margin: 30px;
+    text-align: center;
+  }
+
   .footer {
     background-color: skyblue;
     color: navy;
-    position: absolute;
+    position: fixed;
     bottom: 0px;
     width: 100%;
     .container {
