--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,8 +2,8 @@
   %head
     %title ALEMC
     = stylesheet_link_tag "application", :media => "all" 
-    = stylesheet_link_tag "custom", :media => "all"
     = javascript_include_tag "application" 
+    = stylesheet_link_tag "custom"
     = csrf_meta_tags
   %body
     .head
