--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -27,6 +27,48 @@ body {
   .content {
     margin-bottom: 200px;
   }
+
+  .login_form {
+    font-size: 1.3em;
+    color: navy;
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    left: 0px;
+    bottom: 0px;
+    width: 20%;
+    height: 20%;
+    padding: 40 100 40 100;
+    margin: auto;
+    border: navy solid 2px;
+    border-radius: 20px;
+    box-shadow: 10px 10px 5px #333333;  
+    h1 {
+      display: inline-block;
+      padding: 10 10 10 0;
+    }
+    .form_input {
+      box-shadow: 5px 5px 2px grey;
+    }
+    .submit {
+      display: inline-block;
+      border-radius: 5px;
+      padding: 5 10 5 10;
+      background-color: navy;
+      background-image: -webkit-gradient(linear, bottom, top, from(navy), to(skyblue)); 
+      background-image: -moz-linear-gradient(center bottom, navy 0%, skyblue 100%);
+
+      background-image: -ms-linear-gradient(center bottom, navy 0%, skyblue 100%);
+      background-image: -o-linear-gradient(center bottom, navy 0%, skyblue 100%);
+      color: white;
+      cursor: pointer;
+      &:hover {
+        background-image: -moz-linear-gradient(center bottom, navy 0%, skyblue 76%);
+        background-image: -ms-linear-gradient(center bottom, navy 0%, skyblue 76%);
+        background-image: -o-linear-gradient(center bottom, navy 0%, skyblue 76%);
+      }
+    }
+  }
   
   .home_img {
     margin: 30px;
