--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,12 +1,15 @@
 body {
   overflow-x: auto;
   overflow-y: auto;
+  height: 100%;
+
   .head {
     background-color: skyblue;
     color: navy;
-    padding: 20px;
+    height: 80px;
     .logo {
       cursor: pointer;
+      padding: 20px;
     }
   }
   .nav_wrapper {
@@ -27,7 +30,7 @@ body {
   }
 
   .content {
-    height: 100%;
+    min-height: 80%;
   }
 
   .login_form {
@@ -129,6 +132,7 @@ body {
     background-color: skyblue;
     color: navy;
     position: inherit;
+    height: 12%;
     width: 100%;
     .container {
       padding: 20px;
