--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -30,7 +30,7 @@ body {
   }
 
   .content {
-    min-height: 80%;
+    min-height: 700px;
   }
 
   .login_form {
@@ -45,7 +45,7 @@ body {
   }
 
   .login_form, .create_account_form {
-    position: absolute;
+    position: relative;
     font-size: 1.3em;
     color: navy;
     border: navy solid 2px;
@@ -132,7 +132,7 @@ body {
     background-color: skyblue;
     color: navy;
     position: inherit;
-    height: 12%;
+    height: 160px;
     width: 100%;
     .container {
       padding: 20px;
