Can now log in. Precompiled assets for heroku push.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -108,22 +108,28 @@ body {
     text-align: center;
   }
 
-  .login_bar {
+  .account_bar {
     position: absolute;
     top: 0px;
     right: 0px;
     color: white;
     border-radius: 0px 0px 0px 5px;
     background: black;
-    .login_button {
-     margin: 5px 25px 5px 25px; 
-     position: relative;
-     display: inline-block; 
-     cursor: pointer;
-     &:hover {
-       text-decoration: underline;
-       color: skyblue;
-     }
+    .bar_button {
+      margin: 5px 25px 5px 25px; 
+      position: relative;
+      display: inline-block; 
+      cursor: pointer;
+      &:hover {
+        text-decoration: underline;
+        color: skyblue;
+      }
+    }
+    
+    .username {
+      margin: 5px 25px 5px 25px; 
+      position: relative;
+      display: inline-block; 
     }
 
   }
