added background in the content div

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,7 +9,8 @@
     .head
     .nav_wrapper
       .nav_menu.container
-    .content.container
-      = yield
+    .content
+      .container
+        = yield
     .footer
     .account_bar
