--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -30,16 +30,22 @@ body {
   }
 
   .content {
-    min-height: 700px;
+    min-height: 800px;
+    background: image_url('bg.jpg');
+    box-shadow: inset 0 0 40px 60px white;
   }
 
   .login_form, .forgot_password_form  {
+    background: rgb(255, 255, 255);
+    background: rgba(255, 255, 255, .4);
     width: 400px; 
     margin: 150px 50px 100px 150px;
   }
 
 
   .create_account_form {
+    background: rgb(255, 255, 255);
+    background: rgba(255, 255, 255, .4);
     width: 500px;
     margin: 100px 50px 100px 100px;
   }
@@ -52,6 +58,8 @@ body {
     border: navy solid 2px;
     border-radius: 20px;
     box-shadow: 10px 10px 5px black;
+    -moz-box-shadow: 10px 10px 5px black;
+    -webkit-box-shadow: 10px 10px 5px black;
     padding: 40 100 40 100;
     h1 {
       display: inline-block;
@@ -147,7 +155,7 @@ body {
     background-color: skyblue;
     color: navy;
     position: inherit;
-    height: 160px;
+    height: 60px;
     width: 100%;
     .container {
       padding: 20px;
