added admin bar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -125,7 +125,7 @@ body {
     text-align: center;
   }
 
-  .account_bar {
+  .account_bar, {
     position: absolute;
     top: 0px;
     right: 0px;
